@@ -92,6 +92,9 @@ xx0y2009 (v2.6.0) -** stable release **-
 	- fixed: a nasty bug in 'playat' implementation causing audible
 		 artifacts ; see 
 		 http://eca.cx/ecasound-list/2009/01/0089.html
+	- fixed: sndfile and audiofile backends - emit a warning if 
+		 a seek fails (e.g. when seeking beyond current 
+		 end-of-file for output objects)
 24082008 (v2.5.2) -** stable release **-
 	- more verbose description of change available at:
                  http://eca.cx/relnotes/ecasound_v2_5_2_relnotes.txt
